doc: add doc to project methods
